# magnetrons2

./: CMakeLists.txt  main.cpp
